# ErdosAgriDerivPredict

./: .gitignore  LICENSE  README.md  Soybeans EDA.ipynb  Wheat_Baseline_Model.ipynb  _config.yml  contribution_guide.md  environment.yml  index.md  pyproject.toml  sugar_EDA.ipynb  sugar_model.ipynb
Florida_Oranges/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  Linear Regression.ipynb  Orange Juice Prices.ipynb  Precipitation.ipynb  Stations - Name & Number.docx  Untitled.ipynb  Untitled1.ipynb  average_precipitation_by_date.csv  cleaned_data.csv  combined_data.csv  combined_precipitation.csv  combined_precipitation_data.csv  fake_loss_acreage.csv  orange_juice_close_prices.csv
_data/: analysis_callout_duolink.yml  navigation.yml
_includes/: head-scripts.html  media-block.html
archive/: sentiment_analysis.ipynb
config/: config.toml  data.toml  model.toml  settings.toml
dataset/: top_production_states.json
deliverables/: Corn Future PDA.docx  Erdos Institute Dataset Description.doc  Orange Juice Price Prediction.docx  README.md  Soybeans Prediction.ipynb  ZL-data.csv  ZL-new.csv  ZM-data.csv  ZM-new.csv  ZS-data.csv  ZS-new.csv  corn_future_PDA.md  milestone1.md  orange_juice_price_prediction.md  soy-sunflower-EDA.ipynb
docs/: index.md
docs/_data/: homepage_callout.yml  navigation.yml
docs/_includes/: callouts_duolink.html  (+4 more)
notebooks/: Soybeans Prediction.ipynb  ZL-new.csv  ZM-new.csv  ZS-new.csv  agriculture_EDA.ipynb  cornEDA.ipynb  corn_weather_data.py  soy-sunflower-EDA.ipynb  sugar_EDA.ipynb  sugar_model.ipynb  sugar_preprocess.py  wheatEDA.ipynb
scripts/: cdl_preview.py  weather_stations_preview.py
tests/: Wheat_Baseline_Model.ipynb  api_test.ipynb  cdl_preview.py  putting_all_data_together.ipynb  test.ipynb  weather_stations_preview.py
(+58 files in other folders)
